Support Java 11 (rebased) (#108)
Implement support for Java 11

From PR https://github.com/asciidoctor/asciidoclet/pull/96

* Set version to 2.0.0-SNAPSHOT.
* Set up Java Module and port code to package 'org.asciidoctor.asciidoclet'.
* Removed Google Guava and other third-party dependencies.
* Formatting using default IntellJ.
* Removed --include/--exclude + @asciidoclet filter feature.
  No longer necessary: the way it works now is that the contents always pass to 
  the default Javadoc converter so this is not necessary to do progressive transitions.
* Renamed "render" references by "convert" in code and README.
  For example, AsciidoctorRenderer to AsciidoctorConverter for following recent Asciidoctor naming.
* Removed support and stylesheets for Java versions below 11.
* Fixed locating templates in a Java module runtime (it was causing tests to fail)
* Added Integration (end-2-end) test with maven-invoker-plugin.
  As a downside, this cannot be debugged from IDE, but it's the most realistic real integration test I can think of (previous experiences have mixed results).
* Added .sdkmanrc